<resources>
    <string name="app_name">note</string>
    <string name="live_folder_name">Notes</string>

    <string name="title_edit_title">Note title:</string>
    <string name="title_create">New note</string>
    <string name="title_edit">Edit: %1$s</string>
    <string name="title_notes_list">Notes</string>

    <string name="menu_add">New note</string>
    <string name="menu_save">保存</string>
    <string name="menu_delete">删除</string>
    <string name="menu_open">打开</string>
    <string name="menu_revert">Revert changes</string>
    <string name="menu_copy">复制</string>
    <string name="menu_paste">粘贴</string>
    <string name="menu_media">多媒体操作</string>
    <string name="menu_photo">拍照</string>
    <string name="menu_record">录音</string>
    <string name="menu_alarm">设置闹钟</string>

    <string name="button_ok">OK</string>
    <string name="text_title">Title:</string>

    <string name="resolve_edit">Edit note</string>
    <string name="resolve_title">编辑标题</string>

    <string name="error_title">Error</string>
    <string name="error_message">Error loading note</string>
    <string name="nothing_to_save">There is nothing to save</string>
    <string name="style">设置主题风格</string>
    <string name="theme_pink">老夫的少女心</string>
    <string name="theme_blue">海边的卡夫卡</string>
    <string name="theme_green">挪威的森林</string>
    <string name="theme_purple">紫罗兰的永恒</string>
    <string name="theme_yellow">撒哈拉的故事</string>
    <string name="theme_default">默认主题</string>

    <string name="change_paper">选择信纸</string>

</resources>
